# galaxy-gen

./: .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  .travis.yml  AGENTS.md  Cargo.toml  Dockerfile  angular-cli.json  bootstrap.js  config.yml  development.md  eslint.config.mjs  index.html  index.js  makefile  package-lock.json  package.json  playwright.config.ts  readme.md  tsconfig.json  tslint.json  webpack.config.js
.cargo/: config
.github/: dependabot.yml
.github/workflows/: action.yml  build-and-publish.yml  trufflehog.yml
benches/: debug_sim.rs  tick_bench.rs
client/: bootstrap.js  index.html  karma.conf.js  main.spec.js  main.spec.ts  main.ts  polyfills.ts  readme.md
client/app/: _variables.scss  app.component.ts  app.module.ts  base.scss
client/tests/: galaxygen.spec.js  initalize.spec.js  initalize.spec.ts  karma.conf.js  tsconfig.json
deploy/: Caddyfile  main.yml
docs/: perf-rewrite.md
e2e/: galaxy.spec.ts  perf.spec.ts
pkg/: galaxy_gen.d.ts  galaxy_gen.js  galaxy_gen_backend.d.ts  galaxy_gen_backend.js  galaxy_gen_backend_bg.wasm  galaxy_gen_bg.wasm  package.json
src/: cell.rs  galaxy.rs  lib.rs  main.rs  readme.md  test.rs
src/js/: bootstrap.js  express.js  index.html  index.js  main.ts  readme.md  setup.js  webpack.config.js
src/js/app/: app.component.ts  app.module.ts
src/js/lib/: application.tsx  dataviz.tsx  galaxy.ts  interface.tsx  styles.css  tick-worker.ts  webgpu.ts
src/js/tests/: karma.conf.js
src/rust/: cell.rs  galaxy.rs  galaxyecs.rs  lib.rs  readme.md  utils.rs
