# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "galaxy_gen_backend"
description = "{ rust => wasm => js } galaxy generation simulation"
repository = "https://github.com/coilysiren/galaxy-gen"
version = "0.0.1"
authors = ["Kai Siren <coilysiren@gmail.com>"]
license = "AGPL"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/rust/lib.rs"

[dependencies]
console_error_panic_hook = "^0.1"
wasm-bindgen = "^0.2"
getrandom = { version = "^0.3", features = ["wasm_js"] }
rand = "^0.10"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1

# Skip wasm-opt entirely. The binaryen shipped in Ubuntu's apt repo (what
# CI uses) produces WASM that throws `WebAssembly.Table.grow(): failed to
# grow table by 4` during instantiation in recent chromium — same binary
# works fine locally with Homebrew's newer binaryen. Until the CI
# binaryen is upgraded (or wasm-opt's table-optimization bug is fixed),
# skipping it is the safer default. Size cost is ~+50KB gzipped.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
