# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "galaxy_gen_backend"
description = "{ rust => wasm => js } galaxy generation simulation"
repository = "https://github.com/coilysiren/galaxy-gen"
version = "0.0.1"
authors = ["Kai Siren <coilysiren@gmail.com>"]
license = "AGPL"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/rust/lib.rs"

[[bin]]
name = "tick_bench"
path = "benches/tick_bench.rs"

[dependencies]
console_error_panic_hook = "^0.1"
wasm-bindgen = "^0.2"
getrandom = { version = "^0.3", features = ["wasm_js"] }
rand = "^0.9"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1

# Re-enable wasm-opt with an explicit, conservative flag set. The earlier
# `failed to grow table by 4` error was caused by the unused `specs` crate
# dragging rayon/atomic_refcell/etc into the bundle, not by wasm-opt
# itself. With specs removed, -O3 runs clean.
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3", "--enable-bulk-memory"]
